# data-forge-mcp

./: DF_AGENT_INSTRUCTIONS.md  LLM_INSTRUCTIONS.md  README.md  ddd-draft.md  mcp_server.json  pyproject.toml
.agent/rules/: df-agent.md
data/: mock_series.csv
scripts/: verify_csv.py  verify_discovery.py  verify_sql.py  void_scanner.py
src/: discovery.py  server.py  session_manager.py
tests/: test_phase2_tools.py  test_phase3_tools.py  test_session_manager.py  test_visualization.py
