[project]
name = "data-forge-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.25.0",
    "pandas>=2.3.3",
    "pandera>=0.27.1",
    "pyjanitor>=0.32.8",
    "polars>=0.20.0",
    "ydata-profiling>=4.6.0",
    "setuptools>=80.9.0",
    "pyarrow>=22.0.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "tsfresh>=0.20.2",
    "statsmodels>=0.14.0",
    "datasets>=2.14.0",
    "lxml>=4.9.0",
    "html5lib>=1.1",
    "python-dotenv>=1.0.0",
    "geopandas>=1.1.2",
    "dtale>=3.18.2",
    "shapely>=2.1.2",
    "arxiv>=2.3.1",
    "sentence-transformers>=5.2.0",
    "ripser>=0.6.14",
    "persim>=0.3.8",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251219",
    "pytest>=9.0.2",
]
